
syntax = "proto3";

package pb;

service PayService {
   // 获取套餐列表
  rpc GetPackages(GetPackagesRequest) returns (GetPackagesResponse);

  // 创建订单
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  
  // 获取Native支付二维码
  rpc GetNativePrepay(GetNativePrepayRequest) returns (GetNativePrepayResponse);

  // 获取存储购买状态
  rpc GetStoragePurchaseStatus(GetStoragePurchaseStatusRequest) returns (GetStoragePurchaseStatusResponse);

  // // 创建CidInfo
  // rpc CreateCidInfo(CreateCidInfoRequest) returns (CreateCidInfoResponse);
  
  // 根据CID查询
  rpc GetCidInfo(GetCidInfoRequest) returns (GetCidInfoResponse);
  
  // // 分页查询
  // rpc PageQuery(PageQueryRequest) returns (PageQueryResponse);

  // // 更新审核状态
  // rpc UpdateCheckStatus(UpdateCheckStatusRequest) returns (UpdateCheckStatusResponse);
  
  // // 删除CidInfo
  // rpc DeleteCidInfo(DeleteCidInfoRequest) returns (DeleteCidInfoResponse);
}

// ==================== 获取套餐列表 ====================

// 获取套餐列表请求
message GetPackagesRequest {
  int32 pkg_type = 1;         // 套餐类型 1.nowcode会员费 2.app发布时的应用购买 3.存储购买
  string lang = 2;            // 套餐名称语言 如: zh, en
  string currency = 3;        // 货币代码 人民币CNY，美元USD
}

// 获取套餐列表响应
message GetPackagesResponse {
  int32 code = 1;             // 状态码 0-成功
  string msg = 2;             // 消息
  repeated PackageInfo data = 3;  // 套餐列表
}

// 套餐信息
message PackageInfo {
  int32 pkg_id = 1;           // 套餐ID
  int32 pkg_type = 2;         // 套餐类型
  string pkg_name = 3;        // 套餐名称
  string lang = 4;            // 语言
  int32 amount = 5;           // 套餐金额（分）
  string currency = 6;        // 货币代码
  int32 valid_days = 7;       // 有效天数
  string pkg_rights = 8;      // 用户的购买套餐获得的权利,会员购买时为：{"Dlim":10,"Mlim":180,"Tlim":2000,"Wlim":50,"Ylim":2000}
  int32 chain_pkg_id = 9;     // 区块链套餐ID
  int32 space_size = 10;      // 存储大小（GB）
  string create_time = 11;    // 创建时间
}

// ==================== 创建订单 ====================

// 创建订单请求
message CreateOrderRequest {
  string account = 1;         // 账户 NFTAccount
  int32 pkg_id = 2;           // 套餐ID
  string description = 3;     // 订单描述
  AmountInfo amount = 4;      // 金额信息
  string time_expire = 5;     // 支付超时时间，yyyy-MM-DDTHH:mm:ss+TIMEZONE。yyyy-MM-DD 表示年月日；T 字符用于分隔日期和时间部分；HH:mm:ss 表示具体的时分秒；TIMEZONE 表示时区，示例：2015-05-20T13:29:35+08:00 表示北京时间2015年5月20日13点29分35秒。
  string dappid = 6;          // dappid 应用发布时使用
  string attach = 7;          // 使用应用CID 应用发布时使用
}

// 金额信息
message AmountInfo {
  int32 total = 1;            // 总金额（分）
}

// 创建订单响应
message CreateOrderResponse {
  int32 code = 1;         // 返回码 0-成功
  string msg = 2;         // 返回消息
  CreateOrderData data = 3;   // 订单数据
}

// 订单数据
message CreateOrderData {
  string out_trade_no = 1;    // 商户订单号
}

// ==================== 获取Native支付预付单 ====================

// 获取Native支付预付单请求
message GetNativePrepayRequest {
  string out_trade_no = 1;    // 商户订单号
}

// 获取Native支付预付单响应
message GetNativePrepayResponse {
  int32 code = 1;                    // 状态码 0-成功
  string msg = 2;                    // 消息
  NativePrepayData data = 3;         // 预付单数据
}

// Native预付单数据
message NativePrepayData {
  string code_url = 1;        // 微信支付二维码链接
}

// ==================== 获取存储购买状态 ====================
// 创建订单请求
message GetStoragePurchaseStatusRequest {
  string out_trade_no = 1;    // 商户订单号
}

// 创建订单响应
message GetStoragePurchaseStatusResponse {
  int32 code = 1;         // 返回码 0-成功
  string msg = 2;         // 返回消息
  GetStoragePurchaseStatusData data = 3;   // 订单数据
}

// 订单数据
message GetStoragePurchaseStatusData {
  int32 status = 1;    // 存储购买状态 1.等待确认 2.购买成功
}

// CidInfo 信息
message CidInfo {
  string cid = 1;                 // 应用发布对应的cid
  string account = 2;             // 用户account(nft account)
  string dappid = 3;              // nowcode生成的应用id
  int32 pay_status = 4;           // 支付状态 1.待支付 2.支付成功
  int32 check_status = 5;         // 审核状态 1.待审核 2.审核通过 3.审核被拒
  int32 check_user_id = 6;        // 审核员用户id
  string check_reason = 7;        // 审核被拒原因
  string check_time = 8;          // 审核时间
  string expired_time = 9;        // 应用过期时间，未支付时使用
  string create_time = 10;        // 创建时间
}

// 创建CidInfo请求
message CreateCidInfoRequest {
  string cid = 1;                 // 应用发布对应的cid（必填）
  string account = 2;             // 用户account(nft account)
  string dappid = 3;              // nowcode生成的应用id
}

// 创建CidInfo响应
message CreateCidInfoResponse {
  int32 code = 1;                 // 状态码 0表示成功
  string msg = 2;                 // 返回消息
}

// 根据CID查询请求
message GetCidInfoRequest {
  string cid = 1;                 // CID（必填）
}

// 根据CID查询响应
message GetCidInfoResponse {
  int32 code = 1;                 // 状态码 0表示成功
  string msg = 2;                 // 返回消息
  CidInfo data = 3;               // 返回的数据
}

// 分页查询请求
message PageQueryRequest {
  int32 page = 1;                 // 页码，从1开始
  int32 page_size = 2;            // 每页数量
  string account = 3;             // 用户账号（可选）
  string dappid = 4;              // 应用ID（可选）
  int32 pay_status = 5;           // 支付状态（可选）
  int32 check_status = 6;         // 审核状态（可选）
  string start_time = 7;          // 创建时间开始（可选）
  string end_time = 8;            // 创建时间结束（可选）
}

// 分页查询响应
message PageQueryResponse {
  int32 code = 1;                 // 状态码 0表示成功
  string msg = 2;                 // 返回消息
  CIDPageResult data = 3;         // 返回的数据
}

// 分页结果
message CIDPageResult {
  int64 total = 1;                // 总记录数
  repeated CidInfo list = 2;      // 数据列表
  int32 page = 3;                 // 当前页码
  int32 page_size = 4;            // 每页数量
  int32 total_pages = 5;          // 总页数
}

// 更新审核状态请求
message UpdateCheckStatusRequest {
  string cid = 1;                 // CID（必填）
  int32 check_status = 2;         // 审核状态 1.待审核 2.审核通过 3.审核被拒
  int32 check_user_id = 3;        // 审核员用户id
  string check_reason = 4;        // 审核被拒原因
}

// 更新审核状态响应
message UpdateCheckStatusResponse {
  int32 code = 1;                 // 状态码 0表示成功
  string msg = 2;                 // 返回消息
}

// 删除CidInfo请求
message DeleteCidInfoRequest {
  string cid = 1;                 // CID（必填）
}

// 删除CidInfo响应
message DeleteCidInfoResponse {
  int32 code = 1;                 // 状态码 0表示成功
  string msg = 2;                 // 返回消息
}